WebChecker Service/webchecker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webchecker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webchecker
  template:
    metadata:
      labels:
        app: webchecker
    spec:
      containers:
        - name: webchecker
          image: webchecker:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
