WebChecker Service/webchecker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webchecker
spec:
  selector:
    app: webchecker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
